--- a/src/themes/simplebootx/User/patientInfo.html
+++ b/src/themes/simplebootx/User/patientInfo.html
@@ -88,7 +88,7 @@
 										</tr>
 										<volist name="patients" id="vo">
 										<tr class="datalist">
-											<td><input type="checkbox" class="mini"></td>
+											<td><input type="checkbox" class="mini" name="ids[]" value="{$vo.patient_id}"></td>
 											<td>{$vo.patient_name}</td>
 											<td>{$vo.patient_mobile}</td>
 											<td>{$vo.patient_email}</td>
@@ -126,7 +126,7 @@
 					<div class="formgroup">
 						<span class="name">性别:</span>
 						<div class="formInputBox gendersBox">
-							<input id="man" type="radio" checked="checked" name="patient_sex" />男<input id="woman" type="radio"  name="patient_sex"/>女
+							<input id="man" type="radio" checked="checked" name="patient_sex" value="0"/>男<input id="woman" type="radio"  name="patient_sex" value="1"/>女
 						</div>
 						<div class="hintBox">
 							<span class="errhint">用户名不能为空</span>
@@ -169,7 +169,7 @@
 					<div class="formgroup">
 						<span class="name">性别:</span>
 						<div class="formInputBox gendersBox">
-							<input id="man" type="radio" checked="checked" name="patient_sex" />男<input id="woman" type="radio"  name="patient_sex"/>女
+							<input id="man" type="radio" checked="checked" name="patient_sex" value="0"/>男<input id="woman" type="radio"  name="patient_sex" value="1"/>女
 						</div>
 						<div class="hintBox">
 							<span class="errhint">用户名不能为空</span>
@@ -281,7 +281,7 @@
 					console.log(obj.patient_id);
 					$("#editpatient input[name='patient_name']").val(obj.patient_name);
 					$("#editpatient input[name='patient_mobile']").val(obj.patient_mobile);
-					$("#editpatient input[name='patient_sex']").val(obj.patient_sex);
+					$("#editpatient input:radio[value="+obj.patient_sex+"]").attr('checked','true');
 					$("#editpatient input[name='patient_email']").val(obj.patient_email);
 					$("#editpatient input[name='patient_id']").val(obj.patient_id);
 					$("#editpatient input[name='patient_idcard']").val(obj.patient_idcard);
@@ -361,6 +361,31 @@
 				}
 			})
 		})
+	});
+	/*批量删除*/
+	$("#deleteBtn").on('click', function(){
+		var a = $("input[name='ids[]']:checked");
+		$.ajax({
+	    	url:"{:U('Patients/delete')}",
+			method:"post",
+			data:$("input[name='ids[]']:checked").serialize(),
+			success:function(data){
+				if(data.status == 1){
+					noty({
+						text: data.info,
+			            type:"success",
+			            layout:"center"
+					});
+				$('body').load("{:U('Xing/patientInfo')}");
+				}else{
+					noty({
+						text: data.info,
+			            type:"error",
+			            layout:"center"
+					});
+				}
+			}
+	    });
 	});
 	function tableContentHeight(data) { //底部footer调整
 		if(data.height() > $(window).height()){
