--- a/src/themes/simplebootx/User/personalCenter.html
+++ b/src/themes/simplebootx/User/personalCenter.html
@@ -60,6 +60,7 @@
 			<li><a href="{:U('Xing/safety')}">安全中心</a></li>
 			<li><a href="{:U('Xing/patientInfo')}">病人信息</a></li>
 		</ul>
+		<span><img src="__PUBLIC__/images/lubiao.png" alt=""><a href="{:U('Xing/gh_logCenter')}">挂号记录</a></span>
 		<div class="tab-content">
 			<!-- 个人信息 -->
 			<div class="individual tab-pane" id="home">
