--- a/src/themes/simplebootx/User/personalCenter.html
+++ b/src/themes/simplebootx/User/personalCenter.html
@@ -76,7 +76,7 @@
 						<span class="name">身份证号:</span>
 						<div class="formInputBox"><input type="text" id="idNumber" name="idcard" value="{$hosuser.idcard}"></div>
 						<div class="hintBox">
-							<span class="errhint">请输入有效证件号码注册</span>
+							<!-- <span class="errhint">请输入有效证件号码注册</span> -->
 							<span class="errhint">身份证不合法</span>
 						</div>
 					</div>
@@ -116,6 +116,7 @@
 	</div>
 </body>
 <script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
+<script src="__PUBLIC__/js/xinValidate.js"></script>
 <script type="text/javascript" src="__PUBLIC__/js/jquery.page.js"></script>
 <script src="__PUBLIC__/js/bootstrap.min.js"></script>
 <script src="__PUBLIC__/js/noty/noty.js"></script>
