--- a/src/admin/themes/simplebootx/User/Hosuser/index.html
+++ b/src/admin/themes/simplebootx/User/Hosuser/index.html
@@ -48,7 +48,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<foreach name="order" item="vo">
+					<foreach name="lists" item="vo">
 					<tr>
 					<td>{$vo.hosuser_id}</td>
 					<td>{$vo.hosuser_name}</td>
