--- a/src/themes/simplebootx/User/disease_gh.html
+++ b/src/themes/simplebootx/User/disease_gh.html
@@ -88,7 +88,7 @@
 				</div>
 				<div class="infoRgiht">
 					<div><span>参考费用:</span><span>{$vo.position_price}</span>元</div>
-					<a class="subscribeStatus">预约</a>
+					<a class="subscribeStatus"  href="{:U('Xing/doctorRegistration', array('doctor_id'=> $vo['doctor_id']))}">预约</a>
 				</div>
 			</div>
 		</div>
