--- a/src/themes/simplebootx/User/index.html
+++ b/src/themes/simplebootx/User/index.html
@@ -302,7 +302,7 @@
             return false;
 	 	}
 	 	/*提交信息*/
-	 	$("body").load("{:U('Xing/doctorRegistered')}",{doctor_id:doctor_id});
+	 	$("body").load("{:U('Xing/doctorRegistration')}",{doctor_id:doctor_id});
 	 	/*提交信息结束*/
 	 });
 	});
