--- a/src/themes/simplebootx/User/patientInfo.html
+++ b/src/themes/simplebootx/User/patientInfo.html
@@ -228,7 +228,7 @@
 				$(this).html("女");
 			}
 		})
-		console.log("111",{$vo.patient_name});
+		// console.log("111",'{$vo.patient_name}');
 		console.log();
 		$(".nav-tabs>li>a.patientInfo").tab("show");
 		//表格全选功能
