--- a/src/admin/themes/simplebootx/Admin/Registration/add.html
+++ b/src/admin/themes/simplebootx/Admin/Registration/add.html
@@ -16,11 +16,11 @@
 		            </td>
 		            <td>身份证号:</td>
 					<td>
-		            <input type="text" name="patient_idcard" style="width: 200px;" value="{:I('request.patient_idcard/s','')}" disabled> 
+		            <input type="text" name="patient_idcard" style="width: 200px;" value="{:I('request.patient_idcard/s','')}" readonly> 
 		            </td>
 		            <td>联系电话:</td>
 					<td>
-		            <input type="text" name="patient_mobile" style="width: 150px;" value="{:I('request.patient_mobile/s','')}" disabled> 
+		            <input type="text" name="patient_mobile" style="width: 150px;" value="{:I('request.patient_mobile/s','')}" readonly> 
 		            </td>    
 	            </tr>
 	            <tr>
