--- a/src/themes/simplebootx/User/gh_log4.html
+++ b/src/themes/simplebootx/User/gh_log4.html
@@ -58,10 +58,10 @@
 		<!-- 内容导航 -->
 		<ul class="nav nav-tabs doctorTimeNav">
 			<li><a href="{:U('Xing/gh_logCenter')}">挂号预约</a></li>
-			<li><a href="{:U('Xing/gh_log2')}">未就诊</a></li>
-			<li><a href="{:U('Xing/gh_log3')}">已就诊</a></li>
-			<li><a data-target="#gh_4" href="{:U('Xing/gh_log4')}" class="gh_4">逾期未就诊</a></li>
-			<li><a href="{:U('Xing/gh_log5')}">预约取消</a></li>
+			<li><a href="{:U('Treat/gh_log2')}">未就诊</a></li>
+			<li><a href="{:U('Treat/gh_log3')}">已就诊</a></li>
+			<li><a data-target="#gh_4" href="{:U('Treat/gh_log4')}" class="gh_4">逾期未就诊</a></li>
+			<li><a href="{:U('Treat/gh_log5')}">预约取消</a></li>
 		</ul>
 		<span><img src="__PUBLIC__/images/lubiao.png" alt=""><a href="{:U('Xing/personalCenter')}">个人信息</a></span>
 		<!-- 主内容 -->
@@ -69,18 +69,17 @@
 			<!-- 挂号预约 -->
 			<!-- 查询头部 -->
 			<div class="row searchTableHead">
-				<form>
+				<form action="{:U('Treat/gh_log4')}" method="post">
 					<div class="col-xs-12">
 						<div class="box-body workTime-search">
 							<table class="search-table">
 								<tbody>
 									<tr>
-										<td>挂号单号: <input type="text"></td>
-										<td>病人名称: <input type="text">科室: <input type="text">疾病: <input type="text"></td>
-									</tr>
-									<tr>
-										<td>医生名称: <input type="text"></td>
-										<td>预约时间: <input type="text"><button type="button" id="searchBtn" data-loading-text="loading" class="btn btn-primary" autocomplete="off">查询</button></td>
+										<td>挂号单号: <input type="text" name="order_number" value="{:I('request.order_number/s','')}" placeholder="请输入挂号单号"></td>
+										<td>病人名称: <input type="text" name="patient_name" value="{:I('request.patient_name/s','')}" placeholder="请输入病人名称"></td>
+										<td>医生名称: <input type="text" name="doctor_name" value="{:I('request.doctor_name/s','')}" placeholder="请输入医生名称"></td>
+										<td><!-- 预约时间: <input type="text" name="appoint_time" class="js-date" value="{:I('request.appoint_time/s','')}" autocomplete="off" placeholder="请输入预约时间"> -->
+										<button type="submit" id="searchBtn" data-loading-text="loading" class="btn btn-primary" autocomplete="off">查询</button></td>
 									</tr>
 								</tbody>
 							</table>
@@ -110,44 +109,22 @@
 									</tr>
 								</thead>
 								<tbody>
-									<!-- <volist name="patients" id="vo"> -->
-									<tr class="datalist">
-										<!-- <td><input type="checkbox" class="mini" name="ids[]" value="{$vo.patient_id}"></td> -->
-										<td>2314315</td>
-										<td>超超</td>
-										<td>神经内科</td>
-										<td>武鑫</td>
-										<td>多动症</td>
-										<td>2017-04-11周二上午</td>
-										<td>预约成功</td>
-										<td>25.00</td>
-										<td>
-											<button class="btn btn-primary btn-xs editpatientBtn" id="editTrBtn" patientid="{$vo.patient_id}">
-												<span class="fa fa-fw fa-edit" aria-hidden="true"></span>待支付
-											</button>
-											<button class="btn btn-default btn-xs delpatientBtn" id="deleteTrBtn" patientid="{$vo.patient_id}">
-												<span class="fa fa-fw fa-trash-o" aria-hidden="true"></span>取消支付
-											</button>
-										</td>
+									<foreach name="order" item="vo">
+									<tr>
+									<php>$doctime_id = $vo['doctime'];$dtime = $doctime[$doctime_id]</php>
+									<td>{$vo.order_number}</td>
+									<td>{$vo.patient_name}</td>
+									<td>{$vo.bdept_name}</td>
+									<td>{$vo.doctor_name}</td>
+									<td>{$vo.disease_name}</td>
+									<td>{$vo.appoint_time|date="Y-m-d",###}{$dtime}</td>
+									<td>已预约</td>
+									<td>{$vo.position_price}</td>
+									<td>
+										逾期未就诊
+									</td>
 									</tr>
-									<tr class="datalist">
-										<td>2314315</td>
-										<td>超超</td>
-										<td>神经内科</td>
-										<td>武鑫</td>
-										<td>多动症</td>
-										<td>2017-04-11周二上午</td>
-										<td>预约成功</td>
-										<td>25.00</td>
-										<td>
-											<button class="btn btn-primary btn-xs editpatientBtn" id="editTrBtn" patientid="{$vo.patient_id}">
-												<span class="fa fa-fw fa-edit" aria-hidden="true"></span>待支付
-											</button>
-											<button class="btn btn-default btn-xs delpatientBtn" id="deleteTrBtn" patientid="{$vo.patient_id}">
-												<span class="fa fa-fw fa-trash-o" aria-hidden="true"></span>取消支付
-											</button>
-										</td>
-									</tr>
+									</foreach>
 								</tbody>
 							</table>
 						</div>
@@ -172,7 +149,7 @@
 <script src="__PUBLIC__/layer/layer.js"></script>
 <script src="__PUBLIC__/js/noty/noty.js"></script>
 <script>
-	tableContentHeight($(".personalBox"));
+	// tableContentHeight($(".personalBox"));
 	$(function(){
 		$(".nav-tabs>li>a.gh_4").tab("show");
 		//表格全选功能
@@ -185,10 +162,10 @@
 		});
 		// 分页
 		$("#address-paging").createPage({
-	        pageCount:5,
-	        current:1,
+	        pageCount:{$total_page},
+	        current:{$current_page},
 	        backFn:function(page){
-	        	// $('body').load("{:U('Xing/doctorRegistered')}",{page:page});
+	        	$('body').load("{:U('Ttreat/gh_log4')}",{page:page});
 	        }
 	    });
 	});
