--- a/src/themes/simplebootx/User/personalCenter.html
+++ b/src/themes/simplebootx/User/personalCenter.html
@@ -121,7 +121,7 @@
 <script src="__PUBLIC__/js/bootstrap.min.js"></script>
 <script src="__PUBLIC__/js/noty/noty.js"></script>
 <script>
-	// tableContentHeight($(".personalBox"));
+	tableContentHeight($(".personalBox"));
 	$(function(){
 		$(".nav-tabs>li>a.individual").tab("show");
 	});
