--- a/src/themes/simplebootx/User/safety.html
+++ b/src/themes/simplebootx/User/safety.html
@@ -120,7 +120,7 @@
 	/*编辑*/
 	$(".passwordedit").on('click', function(){
 		$.ajax({
-			url:"{:U('Hosuser/passwordedit')}",
+			url:"{:U('Xing/passwordedit')}",
 			method:"post",
 			data:$('form').serialize(),
 			success:function(data){
